fixing-mobile-landing-spacing

--- a/src/index.css
+++ b/src/index.css
@@ -289,7 +289,7 @@ textarea[placeholder]{
         p{
             margin: 16px 0;
             font-size: 1.1rem;
-            letter-spacing: 1.3px;
+            letter-spacing: 1.2px;
         }     
         .column{
             flex-basis: 100%;
@@ -355,7 +355,7 @@ textarea[placeholder]{
             display: block;
         }
       .col1{
-        margin-top: 24%;
+        margin-top: 40%;
         padding: 0;
     }
       #icon{
